# langodatarep

./: .gitignore  AUTHENTICATION_ARCHITECTURE.md  AUTHENTICATION_SETUP.md  AUTHENTICATION_UPDATE_SUMMARY.md  Admin Guide.txt  COMPLETE_DELIVERABLES.md  EXTENDED_DATA_GROUPS.md  EXTENDED_SYSTEM_SUMMARY.md  EXTENDED_VISUAL_GUIDE.md  EXTENSION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  ITRS_REFACTORING_COMPLETE.md  QUICK_REFERENCE.md  README_AUTHENTICATION.md  SETUP_CHECKLIST.md  START_HERE.md  VISUAL_SUMMARY.md  __init__.py  authentication_examples.py  deployment_script.bat  pyproject.toml  requirements.txt  setup.py
MSPUsersDev/: .env  2.0.1  README.md  config.py  deployment_script.bat  reconcile_itrs.ipynb  setup.py  urt_receipts_comparison.csv  userProgram.ipynb
MSPUsersDev/.ipynb_checkpoints/: userProgram-checkpoint.ipynb
MSPUsersDev/utils/: _.bot.go.tz.crt  auth_token.py  itrs_data.py
MSPUsersDev/utils.egg-info/: PKG-INFO  SOURCES.txt
langodata.egg-info/: PKG-INFO  SOURCES.txt
langodataenv/: pyvenv.cfg
langodataenv/Scripts/: activate  activate.bat
scripts/: .env  ITRSUserProgram.ipynb  MSPUserProgram.ipynb  MSPUserProgramOuter.ipynb  MacroeconomicUserProgram.ipynb  msp_user.py  userProgram.ipynb
src/langodata/: .env  ITRSUserProgram.ipynb  MSPUserProgram.ipynb  README.md  Untitled.ipynb  UpdateITRSMissingReceipts.ipynb  __init__.py  config.py  final.csv  main.py  report.csv
src/langodata.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/langodata/utils/: .env  (+10 more)
src/utils/: __init__.py
tests/: __init__.py  test_basic.py
(+8 files in other folders)
